# tpl

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yaml
docs/: api.rst  conf.py  index.rst  license.rst  manpage.rst
tests/: test_cli.py  test_interface.py
tests/cli/: __init__.py  test_enabled_jinja_features.py  test_faulty_invocations.py  test_help_and_usage.py  test_standard_usecases.py
tpl/: __init__.py  __main__.py
